--- a/biology/ligation-calculator.html
+++ b/biology/ligation-calculator.html
@@ -36,7 +36,7 @@
 <meta name="twitter:description" content="Use this free ligation calculator to determine precise DNA insert volumes and molar ratios for your cloning experiments.">
 <meta name="twitter:image" content="https://calclulo.com/assets/images/ligation-calculator-thumbnail">
 
-<link rel="icon" href="/assets/icons/favicon.ico" type="image/svg+xml">
+<link rel="icon" href="/assets/icons/favicon.ico" type="image/x-icon">
 
 <script type="application/ld+json">
   {
