--- a/biology/annealing-temperature-calculator.html
+++ b/biology/annealing-temperature-calculator.html
@@ -385,7 +385,7 @@ Clear all changes
       <div class="similar-calculators">
         <a href="/agriculture/seed-rate-calculator">Seed Rate Calculator</a>
         <a href="/health/gfr-calculator">GFR Calculator</a>
-<a href="/biology/ligation-calculator.html">Ligation Calculator</a>
+<a href="/biology/ligation-calculator">Ligation Calculator</a>
       </div>
     </div>
   <div class="description-txt">
