--- a/biology/annealing-temperature-calculator.html
+++ b/biology/annealing-temperature-calculator.html
@@ -202,7 +202,7 @@ Everyday Life
     
     </label>
     <div class="input-select-wrap">
-    <input inputmode="numeric" type="text" id="PrimerMeltingTemperature" min="0" step="any">
+    <input   inputmode="numeric" pattern="[0-9]*" type="text" id="PrimerMeltingTemperature" min="0" step="any">
     <select id="PrimerMeltingtemperatureUnit">
                 
       <option value="Celsius">°C</option>
@@ -255,7 +255,7 @@ Everyday Life
 
     </label>
     <div class="input-select-wrap">
-    <input inputmode="numeric" type="text" id="TargetMeltingTemperature" min="0" step="1">
+    <input   inputmode="numeric" pattern="[0-9]*" type="text" id="TargetMeltingTemperature" min="0" step="1">
     <select id="TargetMeltingTemperatureUnit">
 
   <option value="Celsius">°C</option>
@@ -309,7 +309,7 @@ Everyday Life
 
     </label>
     <div class="input-select-wrap">
-    <input inputmode="numeric" type="text" id="Annealingtemperature" min="0" step="any">
+    <input   inputmode="numeric" pattern="[0-9]*" type="text" id="Annealingtemperature" min="0" step="any">
     <select id="AnnealingtemperatureUnit">
 
   <option value="Celsius">°C</option>
