--- a/biology.html
+++ b/biology.html
@@ -201,7 +201,7 @@ Everyday Life
 </div>
 
 <div class="calculators-lists">
-  <h1>Biology Laboratory Calculators</h1>
+  <h1>Biology Laboratory Calculators 🔬</h1>
     <a href="/biology/ligation-calculator">Ligation Calculator</a>
     <a href="/biology/annealing-temperature-calculator">Annealing Temperature Calculator</a>
 </div>
