--- a/biology.html
+++ b/biology.html
@@ -196,7 +196,9 @@ Everyday Life
 </h1>
 <p data-name-category="biology" class="description-header-info-calculator-numb"></p>
   <p class="category-info-p">
-    Tackle biology calculations with ease and make quick, precise decisions. It's an ideal tool for students, educators, and researchers.
+    Biology is the intricate examination of living organisms and ecosystems, even at the molecular level, and often involves calculation and mathematical algebra. Our biology calculators assist in the resolution of such numerals, whether on the field or in the classroom, or just out of vital curiosity of the world and its ecosystems. They convert rigorous biology theorems to biology calculators which give seamless and easy results so that users can cut down on calculation and focus more on the wonders of biology life science.
+
+
   </p>
 </div>
 
