--- a/biology/ligation-calculator.html
+++ b/biology/ligation-calculator.html
@@ -520,7 +520,7 @@ Make your lab work easier and more accurate.
     
     <div class="currency-or-unit-input">
   
-  <input   inputmode="numeric" pattern="[0-9]*" type="text" id="volumeOfInsertDNAToAdd" class="result">
+  <input   inputmode="numeric" pattern="[0-9]*" type="text" id="volumeOfInsertDNAToAdd" >
   <span style="padding-right: 10px;" class="unit-display">µL
   </span>
 </div>
