--- a/biology/cat-pregnancy-calculator.html
+++ b/biology/cat-pregnancy-calculator.html
@@ -283,14 +283,7 @@ Clear all changes
     The <strong>Cat Pregnancy Calculator</strong> is a practical, science-based tool that helps cat owners estimate when a queen (female cat) will give birth. By entering a known or suspected <strong>mating date</strong> (the day the cat was bred) the calculator estimates the most likely due date based on the average feline gestation length and shows a realistic earliest–latest delivery window. Conversely, if you only know a suspected <strong>due date</strong>, the calculator will reverse the math to estimate when mating most likely occurred.  
   </p>  <p>
     Why this matters: feline pregnancies are short and variable — most cats carry for roughly <strong>about 63 days</strong> from mating, but individual variation means births can occur earlier or later. The calculator captures that uncertainty by reporting the typical average, plus a conservative earliest and latest date range so you know when to monitor the queen closely. It also provides a countdown (days until expected foaling) and clarifies whether a date is in the past (useful if you’re checking how many days since birth).  
-  </p> <nav aria-label="Table of contents">
-    <h2>Table of contents</h2>
-    <ul>
-      <li><a href="#how-to-calculate">How to calculate your cat's due date by hand?</a></li>
-      <li><a href="#how-to-use">How to use the calculator</a></li>
-      <li><a href="#faq">FAQ</a></li>
-    </ul>
-  </nav>  <!-- Section 1 -->  <h2 id="how-to-calculate">How to calculate your cat's due date by hand?</h2>
+  </p> <h2 id="how-to-calculate">How to calculate your cat's due date by hand?</h2>
   <p>
     Calculating a cat’s due date manually is straightforward once you understand the basic biology and the conventions breeders use. The typical feline gestation period ranges around <strong>63 days</strong> from the day of mating, though veterinarians commonly accept a practical window of roughly 58–72 days to account for natural variation. The hand-calculation process boils down to three steps: identify the mating date, add the average gestation length to get a best estimate, then compute a reasonable earliest and latest window to reflect biological variability.
   </p>  <p>
@@ -340,8 +333,6 @@ Clear all changes
   </p>  <p>
      <strong>Is there anything else I should know?</strong><br>
     Yes—use estimates cautiously. The calculator helps you plan and know when to intensify monitoring, but good prenatal care (vaccination history, deworming plans, proper nutrition) and timely veterinary checks are the best safeguards. If you’re working with rescues or feral queens where exact dates are unknown, enter your best estimate and use the wide delivery window; increase observation frequency as the earliest date approaches.
-  </p>  <p>
-    If you’d like, I can convert this into a printable support article (PDF friendly) or produce a shorter quick-reference page for breeders with checklists and a veterinary contact template. Which format would you prefer next?
   </p>
 </div>
   </section>
