--- a/biology/cow-gestation-calculator.html
+++ b/biology/cow-gestation-calculator.html
@@ -355,15 +355,8 @@ Clear all changes
     The <strong>Cow Gestation Calculator</strong> is a simple, practical tool that helps farmers, breeders and livestock caretakers estimate when a cow is likely to calve. By entering a confirmed <strong>breeding date</strong> (the day the cow was exposed or inseminated) the calculator computes an expected due date based on standard bovine gestation length and then shows a realistic earliest–latest calving window so you can plan staffing, veterinary checks and newborn care. If you only know a likely <strong>farrowing or calving date</strong>, the tool will run the math in reverse to estimate the probable breeding date.  
   </p>  <p>
     The goal is practical planning — not diagnosis. The calculator uses date-only arithmetic (so results won’t shift because of timezone issues), clearly marks any field it filled for you, and gives both the headline estimate and the safety window so you can prepare a clean calving area, schedule a pre-calving vet check and organise colostrum and newborn care. Use it to reduce surprises and make calving season smoother for your herd.
-  </p>  <!-- Table of contents -->  <nav aria-label="Table of contents">
-    <h2>Table of contents</h2>
-    <ul>
-      <li><a href="#what-is-cow-gestation">What is Cow Gestation</a></li>
-      <li><a href="#how-to-calculate">How to calculate Cow Gestation by hand?</a></li>
-      <li><a href="#how-to-use">How to use the calculator</a></li>
-      <li><a href="#faq">FAQ</a></li>
-    </ul>
-  </nav>  <!-- Section 1 -->  <h2 id="what-is-cow-gestation">What is Cow Gestation</h2>
+  </p>
+  <h2 id="what-is-cow-gestation">What is Cow Gestation</h2>
   <p>
     Cow gestation refers to the period from the moment a cow is successfully bred (whether naturally or by artificial insemination) until she gives birth to a calf. On a population level, gestation in domestic cattle centers around an average of approximately <strong>283 days</strong> — roughly nine months and a few days — but individual pregnancies vary. That variation is normal: breed, parity (whether the cow is a first-time calver or multiparous), fetal number (twins), nutrition, stress and environmental factors all subtly influence the exact length of each pregnancy. For farmers and herd managers, understanding gestation is not just academic; it’s essential operational knowledge: it helps time veterinary checks, vaccinations, nutritional adjustments in the dry and transition periods, and labour coverage for calving season.
   </p>  <p>
