--- a/biology/dog-pregnancy-calculator.html
+++ b/biology/dog-pregnancy-calculator.html
@@ -281,13 +281,7 @@ Clear all changes
     The <strong>Dog Pregnancy Calculator</strong> is a simple, reliable tool that helps dog owners and breeders estimate a pregnant dog’s expected <strong>due date</strong> using common veterinary standards. Enter either the observed <strong>mating date</strong> (the day of breeding or insemination) or a suspected <strong>due date</strong>, and the calculator performs date-only arithmetic to produce an evidence-based headline estimate and a practical earliest–latest whelping window. The tool is designed to reduce guesswork so you can schedule vet checks, prepare a quiet whelping area, and assemble essential supplies well before the pups arrive.  
   </p>  <p>
     Built to be user-friendly and accurate in daily practice, the calculator uses the widely accepted canine gestation average (about <strong>63 days</strong>) and a safe biological range to present a realistic planning window rather than a single “must-deliver” day. It also avoids timezone-induced one-day errors by working in date-only terms, and highlights programmatically filled fields so you know which value was entered by you and which was computed by the tool. Use it to plan, not to diagnose — always pair its output with veterinary care and observation as the due window approaches.
-  </p>  <!-- Table of contents -->  <h2>Table of contents</h2>
-  <ul>
-    <li><a href="#due-date-labor-pregnancy">Dog due date, labor, and pregnancy</a></li>
-    <li><a href="#manual-calculation">How to calculate Dog Pregnancy manually?</a></li>
-    <li><a href="#how-to-use-calculator">How to use the Dog Pregnancy Calculator</a></li>
-    <li><a href="#faq">FAQ</a></li>
-  </ul>  <!-- Section 1 -->  <h2 id="due-date-labor-pregnancy">Dog due date, labor, and pregnancy</h2>
+  </p>  <h2 id="due-date-labor-pregnancy">Dog due date, labor, and pregnancy</h2>
   <p>
     Understanding dog pregnancy begins with the biology of the canine reproductive cycle and ends with reliable readiness for whelping (giving birth). For most domestic dogs, the period from conception (fertilization) to delivery averages roughly <strong>63 days</strong> — about nine weeks. However, that average obscures important variation: pregnancies can be as short as ~58 days or as long as ~68 days in typical cases, and a handful of animals fall slightly outside this window. Breed, age, parity (first pregnancy vs subsequent), litter size, and maternal health all influence timing. This section explains what the average means in practice, the stages of canine pregnancy, how labor typically unfolds, and what owners should monitor to ensure a safe whelping.
   </p>  <p>
@@ -348,10 +342,7 @@ Clear all changes
   </p>  <p>
     Q: <strong>What if my mating windows are uncertain?</strong><br>
     If mating occurred over several days — which happens frequently in natural breeding — choose the most likely fertile day for a tighter estimate or enter the midpoint and accept a wider earliest/latest window for monitoring. The calculator’s results remain useful even with uncertainty: use the bigger window to guide observation and have veterinary support on standby around the earliest possible dates.
-  </p>  <p>
-    Q: <strong>Anything else to keep in mind?</strong><br>
-    Use the Dog Pregnancy Calculator as a planning tool, not a substitute for veterinary care. It helps you prepare, schedule checks, and reduce surprises. For clinical questions about fetal health, dystocia risk, or interventions, your veterinarian is the right resource. If you want, I can convert this support article into a printable checklist for whelping preparation or a short mobile-friendly quick guide for breeders — tell me which format you prefer.
-  </p>
+  </p>   
 </div>
   </section>
   
