--- a/biology/goat-gestation-calculator.html
+++ b/biology/goat-gestation-calculator.html
@@ -331,15 +331,7 @@ Clear all changes
     The <strong>Goat Gestation Calculator</strong> is a practical, farmer-friendly tool that helps caretakers estimate when a doe (female goat) will kid. Enter a known or suspected <strong>breeding date</strong> and the calculator returns an evidence-based estimated due date plus an earliest–latest kidding window. If you only have an estimated <strong>kidding date</strong>, the tool will run the math in reverse to suggest the most likely breeding date. The calculator uses conventional gestation values for goats (commonly an average of <strong>150 days</strong>, with a typical biological range near 145–155 days) and performs date-only arithmetic so results do not shift due to timezones or clock differences.
   </p>  <p>
     This tool is designed for planning—not diagnosis. Use its output to schedule vet checks, prepare a clean kidding pen, assemble colostrum and warming supplies, and plan staffing during the high-risk window. The calculator also marks fields it fills for you (for example with a <code>.result</code> class) so it’s clear which date you entered and which one the tool calculated. Always combine the calculator’s guidance with regular herd observation and veterinary advice when the kidding window approaches.
-  </p>  <!-- Table of contents -->  <nav aria-label="Table of contents">
-    <h2>Table of contents</h2>
-    <ul>
-      <li><a href="#what-is-goat-gestation">What is Goat Gestation</a></li>
-      <li><a href="#how-to-calculate">How to calculate Goat Gestation manually?</a></li>
-      <li><a href="#how-to-use-calculator">How to use the Goat Gestation Calculator</a></li>
-      <li><a href="#faq">FAQ</a></li>
-    </ul>
-  </nav>  <!-- Section 1 -->  <h2 id="what-is-goat-gestation">What is Goat Gestation</h2>
+  </p>  <h2 id="what-is-goat-gestation">What is Goat Gestation</h2>
   <p>
     Goat gestation — the period between conception and birth — is a fundamental biological interval that determines how farmers and breeders plan for kidding season. On a population level, small ruminants such as goats tend to have a relatively consistent gestation length: most sources list an average around <strong>150 days</strong>, often with a practical range of about <strong>145–155 days</strong>. However, that headline average hides important biological variation. Breed differences (for example, some miniature or dwarf breeds have slightly shorter averages), parity (a first-time doe may carry a few days longer), litter size (twins or triplets can shift timing slightly), and non-biological factors such as nutrition and climate all influence the timing of parturition.
   </p>  <p>
@@ -424,10 +416,7 @@ Clear all changes
   </p>  <p>
     <strong>How should I handle uncertain breeding dates (group mating)?</strong><br>
     When breeding dates are uncertain because of group mating, choose either the most probable breeding date (AI date or observed tie) or use a midpoint as a working reference. Accept that this will widen your monitoring window; allocate staff or arrange neighbor support for the entire window. The Goat Gestation Calculator is still useful in this scenario because it converts uncertain inputs into an actionable timeframe rather than leaving you without guidance.
-  </p>  <p>
-    <strong>Final advice</strong><br>
-    Use the calculator as a planning and risk-management tool, not as a substitute for veterinary diagnostics. Combine its output with good herd records, mid-gestation veterinary checks when needed, and practical on-farm preparations. If you’d like, I can convert this article into a printable checklist for kidding preparation or produce a condensed quick-reference sheet tailored to your herd’s breed and management style.
-  </p>
+  </p> 
 </div>
   </section>
   
