--- a/biology/guinea-pig-pregnancy-calculator.html
+++ b/biology/guinea-pig-pregnancy-calculator.html
@@ -281,15 +281,8 @@ Clear all changes
     The <strong>Guinea Pig Pregnancy Calculator</strong> is a fast, user-friendly tool that helps small-pet owners estimate when their sow (female guinea pig) will give birth. Enter a known or suspected <strong>mating date</strong> and the calculator returns an evidence-based expected farrowing date plus a practical earliest–latest delivery window. If you only know a probable <strong>due date</strong>, enter it and the tool will reverse the math to estimate the most likely mating date. The calculator uses widely accepted guinea pig biology (typical gestation ranges) and performs date-only arithmetic so results won’t shift with timezones or device clocks.
   </p>  <p>
     Designed for planning — not for medical diagnosis — the calculator helps you schedule vet checks, prepare a warm, quiet nesting area, and assemble essential supplies like towels, a bulb syringe and colostrum containers. The tool also visually flags fields it fills automatically (so you can tell what you typed vs. what the tool computed). Use it as a reliable timeline guide; combine its output with regular hands-on observation and veterinary advice during the critical last weeks of pregnancy.
-  </p>  <!-- Table of contents -->  <h2>Table of contents</h2>
-  <nav aria-label="Table of contents">
-    <ul>
-      <li><a href="#gestation">Guinea pig gestation period</a></li>
-      <li><a href="#manual">How to calculate Guinea Pig Pregnancy manually?</a></li>
-      <li><a href="#how-to-use">How to use the Guinea Pig Pregnancy Calculator</a></li>
-      <li><a href="#faq">FAQ</a></li>
-    </ul>
-  </nav>  <!-- Section 1 -->  <h2 id="gestation">Guinea pig gestation period</h2>
+  </p>
+  <h2 id="gestation">Guinea pig gestation period</h2>
   <p>
     Understanding the guinea pig gestation period is the foundation of any reliable planning process for breeders, rescue volunteers or pet owners. The reproductive biology of guinea pigs (Cavia porcellus) is compact compared with many larger mammals: a typical pregnancy lasts just a few weeks longer than two months. Most sources agree that the usual range is about <strong>59–72 days</strong>, with many references citing an average near <strong>63 days</strong>. That central figure is a useful working average for planning, but it is important to keep in mind that natural variation — due to breed, parity (first pregnancy versus subsequent pregnancies), litter size and maternal condition — can shift the timing of birth by several days.
   </p>  <p>
