--- a/biology/horse-gestation-calculator.html
+++ b/biology/horse-gestation-calculator.html
@@ -285,16 +285,7 @@ Clear all changes
     This tool is meant for planning and preparation: use it to schedule veterinary checks, prepare foaling stalls, arrange staffing for overnight monitoring, and assemble neonatal supplies like colostrum bottles and warming equipment. It’s not a diagnostic instrument — clinical confirmation (ultrasound, physical exam) and veterinary advice remain essential — but it dramatically reduces guesswork and helps you act early and calmly.
   </p>  <p>
     Designed to mirror best practices, the calculator uses commonly accepted equine gestation conventions (an average of about <strong>340 days</strong> with a practical range) and shows clear, human-readable outputs: days until (or since) foaling, weekday name for the expected day, and earliest/latest foaling dates so you can plan staff and veterinary backup.
-  </p>  <!-- Table of contents -->  <h2>Table of contents</h2>
-  <nav aria-label="Table of contents">
-    <ul>
-      <li><a href="#what-is-foaling">What is foaling?</a></li>
-      <li><a href="#use-calculator-basic">How to use the horse gestation calculator?</a></li>
-      <li><a href="#manual-calculation">How to calculate horse gestation manually?</a></li>
-      <li><a href="#use-calculator-advanced">How to use the horse gestation Calculator</a></li>
-      <li><a href="#faq">FAQ</a></li>
-    </ul>
-  </nav>  <!-- Section 1 -->  <h2 id="what-is-foaling">What is foaling?</h2>
+  </p>   <h2 id="what-is-foaling">What is foaling?</h2>
   <p>
     Foaling is the process by which a mare gives birth to a foal. Biologically, it is the culmination of pregnancy (gestation) and includes a sequence of physiological and behavioral events that prepare both mare and fetus for delivery. In domestic horses (Equus ferus caballus), gestation is long compared with many domestic animals — typically in the area of 320–362 days, with a widely used average of about <strong>340 days</strong>. That long duration helps produce foals that are relatively well developed at birth: they stand, nurse, and follow the mare within a matter of hours, an evolutionary advantage for prey animals.
   </p>  <p>
