--- a/biology/sheep-gestation-calculator.html
+++ b/biology/sheep-gestation-calculator.html
@@ -275,12 +275,80 @@ Clear all changes
         <a href="/everyday-life">Fat Intake Calculator</a>
       </div>
     </div>
-
+<div class="description-txt">
+  <!-- Description (≈200 words) -->
+  <p>
+    The <strong>Sheep Gestation Calculator</strong> is a specialized planning tool created for farmers, breeders, and animal caretakers who need to estimate when their ewes will lamb. By entering a <strong>mating or service date</strong>, the calculator automatically determines the <strong>expected lambing date</strong>, an earliest–latest delivery window, and a practical countdown to parturition. This helps you prepare lambing pens, arrange staff or veterinary assistance, and monitor your flock more closely during the critical days leading up to birth.  
+  </p>  <p>
+    Sheep gestation typically averages around <strong>147 days</strong>, but depending on breed, nutrition, and environmental conditions, it can range between <strong>144–152 days</strong>. Because of this natural variability, the calculator does not simply give you one fixed day — instead, it shows a range that reflects biological reality. The tool also highlights which field you entered and which was calculated (through a visual marker), reducing confusion in record-keeping. While not a replacement for veterinary diagnosis, it provides a reliable framework for farm planning and helps reduce lambing surprises. With the calculator, you can better align health checks, vaccinations, and lambing preparations for improved flock management and healthier lambs.  
+  </p>   <h2 id="how-to-use">How to use the Sheep Gestation Calculator?</h2>
+  <p>
+    Using the Sheep Gestation Calculator is straightforward, but its value lies in the precision it brings to your lambing schedule. To calculate an estimated lambing date, you simply need to input the <strong>date of mating or service</strong>. This could be the day you introduced the ram to the ewe or, in the case of artificial insemination, the insemination date. The calculator then adds the average gestation length (147 days) to this date and produces an expected lambing date along with a range.  
+  </p>  <p>
+    The tool accounts for the biological spread of gestation lengths by showing an <strong>earliest and latest possible date</strong>. For example, if your ewe was serviced on October 1st, the calculator will estimate a lambing date around February 25th but also provide a window from February 22nd to March 4th. This makes it easier to prepare lambing pens, ensure clean bedding, and arrange for veterinary assistance if necessary.  
+  </p>  <p>
+    Beyond simply predicting lambing day, the calculator provides practical insights. It includes a <strong>countdown feature</strong>, letting you know how many days remain until lambing. This is useful for farm scheduling, especially in larger flocks where dozens of ewes may be due around the same time. It also helps farmers to group and manage ewes efficiently, minimizing stress during late gestation. The calculator can also work in reverse — if you know the expected lambing date but not the mating date, you can input the due date and the calculator will subtract the gestation length to provide an estimated conception date.  
+  </p>  <p>
+    While highly accurate for planning, remember that the calculator is a <strong>management aid</strong> rather than a veterinary diagnostic tool. Actual lambing can happen a few days before or after the predicted window. Therefore, always begin monitoring your ewes closely from the earliest estimated date. Good record-keeping, combined with the calculator, allows you to refine lambing predictions over time, especially since different sheep breeds may have slightly different gestation averages.  
+  </p>  <!-- Section: FAQ -->  <h2 id="faq">FAQ</h2>
+  <p>
+    <strong>What is the average gestation period in sheep?</strong><br>
+    On average, sheep gestation lasts around <strong>147 days</strong>. However, the range can vary between 144–152 days depending on the breed, age of the ewe, number of lambs she is carrying, and environmental conditions. Twin pregnancies, for example, are sometimes associated with slightly shorter gestation periods compared to single lamb pregnancies.  
+  </p>  <p>
+    <strong>Why does gestation length vary in sheep?</strong><br>
+    Several factors affect gestation length. Breed differences play a big role — some sheep breeds are genetically predisposed to shorter or longer pregnancies. Nutrition also matters; ewes on a higher plane of nutrition may sometimes lamb a bit earlier. Environmental factors such as season, temperature, and stress can also shift the timing by a few days. Because of these variables, the calculator provides a range instead of a fixed date, giving you a more realistic planning tool.  
+  </p>  <p>
+    <strong>Does the calculator replace veterinary checks?</strong><br>
+    No. While the calculator is a valuable management tool, it cannot detect pregnancy or complications. Veterinary confirmation through ultrasound (typically reliable from 30–60 days post-mating) is the best way to confirm pregnancy, detect multiple lambs, and assess ewe health. The calculator should be used alongside veterinary input and good flock management practices.  
+  </p>  <p>
+    <strong>How can I prepare for lambing using the calculator?</strong><br>
+    The main benefit of the calculator is that it gives you a clear window for when to begin <strong>intensive monitoring</strong>. You can use it to schedule vaccination boosters (such as clostridial vaccines 2–4 weeks before lambing), prepare lambing pens with fresh bedding, and stock up on colostrum replacers, lambing supplies, and veterinary contact numbers. By aligning preparations with the calculator’s predictions, you reduce last-minute stress and improve lamb survival rates.  
+  </p>  <p>
+    <strong>Can the calculator be customized for my flock?</strong><br>
+    Yes. If you keep consistent breeding and lambing records, you may notice that your flock’s gestation length is consistently a little shorter or longer than the textbook average. In that case, you can adjust the calculator’s baseline gestation period to match your herd data. This customization improves accuracy over time, making it even more reliable for your farm.  
+  </p>
+</div>
   </section>
   
 <footer>
     <h3>Calculator Categories</h3>
-    <div class="calculator-categories-footer">
+    <div class="calculator-categories-footer"<div class="description-txt">
+  <!-- Description (≈200 words) -->
+  <p>
+    The <strong>Sheep Gestation Calculator</strong> is a specialized planning tool created for farmers, breeders, and animal caretakers who need to estimate when their ewes will lamb. By entering a <strong>mating or service date</strong>, the calculator automatically determines the <strong>expected lambing date</strong>, an earliest–latest delivery window, and a practical countdown to parturition. This helps you prepare lambing pens, arrange staff or veterinary assistance, and monitor your flock more closely during the critical days leading up to birth.  
+  </p>  <p>
+    Sheep gestation typically averages around <strong>147 days</strong>, but depending on breed, nutrition, and environmental conditions, it can range between <strong>144–152 days</strong>. Because of this natural variability, the calculator does not simply give you one fixed day — instead, it shows a range that reflects biological reality. The tool also highlights which field you entered and which was calculated (through a visual marker), reducing confusion in record-keeping. While not a replacement for veterinary diagnosis, it provides a reliable framework for farm planning and helps reduce lambing surprises. With the calculator, you can better align health checks, vaccinations, and lambing preparations for improved flock management and healthier lambs.  
+  </p>
+  <h2 id="how-to-use">How to use the Sheep Gestation Calculator?</h2>
+  <p>
+    Using the Sheep Gestation Calculator is straightforward, but its value lies in the precision it brings to your lambing schedule. To calculate an estimated lambing date, you simply need to input the <strong>date of mating or service</strong>. This could be the day you introduced the ram to the ewe or, in the case of artificial insemination, the insemination date. The calculator then adds the average gestation length (147 days) to this date and produces an expected lambing date along with a range.  
+  </p>  <p>
+    The tool accounts for the biological spread of gestation lengths by showing an <strong>earliest and latest possible date</strong>. For example, if your ewe was serviced on October 1st, the calculator will estimate a lambing date around February 25th but also provide a window from February 22nd to March 4th. This makes it easier to prepare lambing pens, ensure clean bedding, and arrange for veterinary assistance if necessary.  
+  </p>  <p>
+    Beyond simply predicting lambing day, the calculator provides practical insights. It includes a <strong>countdown feature</strong>, letting you know how many days remain until lambing. This is useful for farm scheduling, especially in larger flocks where dozens of ewes may be due around the same time. It also helps farmers to group and manage ewes efficiently, minimizing stress during late gestation. The calculator can also work in reverse — if you know the expected lambing date but not the mating date, you can input the due date and the calculator will subtract the gestation length to provide an estimated conception date.  
+  </p>  <p>
+    While highly accurate for planning, remember that the calculator is a <strong>management aid</strong> rather than a veterinary diagnostic tool. Actual lambing can happen a few days before or after the predicted window. Therefore, always begin monitoring your ewes closely from the earliest estimated date. Good record-keeping, combined with the calculator, allows you to refine lambing predictions over time, especially since different sheep breeds may have slightly different gestation averages.  
+  </p>  <!-- Section: FAQ -->  <h2 id="faq">FAQ</h2>
+  <p>
+    <strong>What is the average gestation period in sheep?</strong><br>
+    On average, sheep gestation lasts around <strong>147 days</strong>. However, the range can vary between 144–152 days depending on the breed, age of the ewe, number of lambs she is carrying, and environmental conditions. Twin pregnancies, for example, are sometimes associated with slightly shorter gestation periods compared to single lamb pregnancies.  
+  </p>  <p>
+    <strong>Why does gestation length vary in sheep?</strong><br>
+    Several factors affect gestation length. Breed differences play a big role — some sheep breeds are genetically predisposed to shorter or longer pregnancies. Nutrition also matters; ewes on a higher plane of nutrition may sometimes lamb a bit earlier. Environmental factors such as season, temperature, and stress can also shift the timing by a few days. Because of these variables, the calculator provides a range instead of a fixed date, giving you a more realistic planning tool.  
+  </p>  <p>
+    <strong>Does the calculator replace veterinary checks?</strong><br>
+    No. While the calculator is a valuable management tool, it cannot detect pregnancy or complications. Veterinary confirmation through ultrasound (typically reliable from 30–60 days post-mating) is the best way to confirm pregnancy, detect multiple lambs, and assess ewe health. The calculator should be used alongside veterinary input and good flock management practices.  
+  </p>  <p>
+    <strong>How can I prepare for lambing using the calculator?</strong><br>
+    The main benefit of the calculator is that it gives you a clear window for when to begin <strong>intensive monitoring</strong>. You can use it to schedule vaccination boosters (such as clostridial vaccines 2–4 weeks before lambing), prepare lambing pens with fresh bedding, and stock up on colostrum replacers, lambing supplies, and veterinary contact numbers. By aligning preparations with the calculator’s predictions, you reduce last-minute stress and improve lamb survival rates.  
+  </p>  <p>
+    <strong>Can the calculator be customized for my flock?</strong><br>
+    Yes. If you keep consistent breeding and lambing records, you may notice that your flock’s gestation length is consistently a little shorter or longer than the textbook average. In that case, you can adjust the calculator’s baseline gestation period to match your herd data. This customization improves accuracy over time, making it even more reliable for your farm.  
+  </p>  <p>
+    <strong>Final guidance:</strong><br>
+    The Sheep Gestation Calculator is most powerful when combined with <strong>good records</strong>, <strong>close monitoring</strong>, and <strong>veterinary support</strong>. Use it to plan ahead, prepare your lambing area, and reduce surprises at lambing time. While you cannot predict everything, having a clear timeline empowers you to make better decisions for ewe and lamb health, resulting in smoother, safer lambing seasons.  
+  </p>
+</div>>
   
  <a class="agriculture-two" href="/agriculture">
 <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#1f1f1f"><path d="M160-600q-17 0-28.5-11.5T120-640q0-17 11.5-28.5T160-680h120q33 0 56.5 23.5T360-600H160Zm80 360q50 0 85-35t35-85q0-50-35-85t-85-35q-50 0-85 35t-35 85q0 50 35 85t85 35Zm540 0q25 0 42.5-17.5T840-300q0-25-17.5-42.5T780-360q-25 0-42.5 17.5T720-300q0 25 17.5 42.5T780-240Zm-540-60q-25 0-42.5-17.5T180-360q0-25 17.5-42.5T240-420q25 0 42.5 17.5T300-360q0 25-17.5 42.5T240-300Zm560-139q26 5 43 13.5t37 27.5v-242q0-33-23.5-56.5T800-720H548l-42-44 56-56-28-28-142 142 30 28 56-56 42 42v92q0 33-23.5 56.5T440-520h-81q23 17 37 35t28 45h16q66 0 113-47t47-113v-40h200v201ZM641-320q6-27 14.5-43.5T682-400H436q4 23 4 40t-4 40h205Zm139 160q-58 0-99-41t-41-99q0-58 41-99t99-41q58 0 99 41t41 99q0 58-41 99t-99 41Zm-540 0q-83 0-141.5-58.5T40-360q0-83 58.5-141.5T240-560q83 0 141.5 58.5T440-360q0 83-58.5 141.5T240-160Zm393-360Z"/></svg>
